# nuko-ime

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: BRAND.md  FUTURE_FEATURES.md  PROJECT_PLAN.md  SPECIFICATION.md  VISION.md
docs/research/: macos-ime-research.md
nuko-cli/: Cargo.toml
nuko-cli/src/: main.rs
nuko-core/: Cargo.toml
nuko-core/benches/: conversion.rs
nuko-core/src/: error.rs  lib.rs
nuko-core/src/conversion/: candidate.rs  context.rs  engine.rs  mod.rs
nuko-core/src/dictionary/: manager.rs  mod.rs  system.rs  user.rs
nuko-core/src/input/: kana.rs  mod.rs  mozc_table.rs  romaji.rs
nuko-core/src/learning/: frequency.rs  manager.rs  mod.rs
nuko-macos/: Cargo.toml  Info.plist  build.rs
nuko-macos/resources/: icon-japanese.tiff  icon-roman.tiff  icon.tiff
nuko-macos/resources/en.lproj/: InfoPlist.strings
nuko-macos/resources/ja.lproj/: InfoPlist.strings
nuko-macos/scripts/: install.sh
nuko-macos/src/: controller.rs  main.rs  state.rs
nuko-platform/: Cargo.toml
nuko-platform/src/: config.rs  error.rs  lib.rs
nuko-platform/src/linux/: ime.rs  mod.rs
nuko-platform/src/macos/: ime.rs  mod.rs
nuko-platform/src/windows/: ime.rs  mod.rs
nuko-ui/: Cargo.toml
nuko-ui/src/: candidate_window.rs  lib.rs  settings.rs  theme.rs
