[workspace]
resolver = "2"
members = [
    "nuko-core",
    "nuko-platform",
    "nuko-ui",
    "nuko-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ぬこIME Contributors"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/your-org/nuko-ime"
homepage = "https://github.com/your-org/nuko-ime"
description = "日本人の、日本人による、日本人のためのIME"
readme = "README.md"
keywords = ["ime", "japanese", "input-method", "日本語"]
categories = ["text-processing", "internationalization"]

[workspace.dependencies]
# 形態素解析（ビルド時にIPADIC辞書をダウンロード）
lindera = { version = "0.36", features = ["ipadic"] }

# データベース・ストレージ
redb = "2.2"

# シリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 非同期
tokio = { version = "1.41", features = ["full"] }

# エラーハンドリング
thiserror = "2.0"
anyhow = "1.0"

# ログ・診断
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ユーティリティ
once_cell = "1.20"
parking_lot = "0.12"
unicode-normalization = "0.1"
unicode-segmentation = "1.12"

# テスト
proptest = "1.5"
criterion = "0.5"

# ワークスペース内クレート
nuko-core = { path = "nuko-core" }
nuko-platform = { path = "nuko-platform" }
nuko-ui = { path = "nuko-ui" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = true
codegen-units = 1
