[package]
name = "nuko-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ぬこIME CLIツール - 辞書管理・変換テスト・ベンチマーク"
readme = "README.md"

[[bin]]
name = "nuko"
path = "src/main.rs"

[[bin]]
name = "nuko-dict"
path = "src/bin/dict.rs"

[[bin]]
name = "nuko-bench"
path = "src/bin/bench.rs"

[dependencies]
nuko-core = { workspace = true }
nuko-platform = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# シリアライズ
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# エラーハンドリング
anyhow = { workspace = true }

# ログ
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# ユーティリティ
colored = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
