[package]
name = "nuko-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ぬこIME コアエンジン - 変換処理・辞書管理・学習機能"
readme = "README.md"

[dependencies]
# 形態素解析
lindera = { workspace = true }
lindera-core = { workspace = true }
lindera-dictionary = { workspace = true }
lindera-tokenizer = { workspace = true }

# データベース
redb = { workspace = true }

# シリアライズ
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# エラーハンドリング
thiserror = { workspace = true }
anyhow = { workspace = true }

# ログ
tracing = { workspace = true }

# ユーティリティ
once_cell = { workspace = true }
parking_lot = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "conversion"
harness = false
